fix: image not scale properly on mobile view

--- a/css/travel.css
+++ b/css/travel.css
@@ -1,13 +1,13 @@
-.gallery{
+/* .gallery{
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
   }
   
 .gallery img{
-    border-radius: 1vw;
+    /* border-radius: 1vw;
     border: 1vw solid #36a66863;
-    margin: 10px 10px 10px 10px;
+    margin: 10px 10px 10px 10px; */
     width: 100%;
     object-fit: cover;
-  }
+  } */
